--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <h2 id='title'>Welcome to Ember.js</h2>
 
 {{#my-table rows=myData}}
-  {{#my-column}}
+  {{#my-column sortField="id"}}
     {{#my-column-header}}
       Id
     {{/my-column-header}}
@@ -10,7 +10,7 @@
     {{/my-column-cell}}
   {{/my-column}}
 
-  {{#my-column}}
+  {{#my-column sortField="name"}}
     {{#my-column-header}}
       Name
     {{/my-column-header}}
@@ -19,7 +19,7 @@
     {{/my-column-cell}}
   {{/my-column}}
 
-  {{#my-column}}
+  {{#my-column sortField="number"}}
     {{#my-column-header}}
       Number
     {{/my-column-header}}
